--- a/LEGAL2.csproj
+++ b/LEGAL2.csproj
@@ -33,7 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MySql.Data">
+    <Reference Include="MySql.Data, Version=8.3.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Downloads\mysql-connector-net-8.3.0-noinstall\v4.8\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
